[package]
name = "memory_engine"
version = "0.1.0"
edition = "2021"
description = "Core Rust library powering FinMemory's long-term knowledge store"
authors = ["FinMemory Team <dev@finmemory.local>"]
license = "MIT"
repository = "https://example.com/finmemory"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
